v62: For some reason on mobile, after I select something resizing, it doesn't seem to work investigate and fix this also while you're doing that, add a rotate icon when selected.So we can rotate the object and be sure, all this data is being stored in our

--- a/style.css
+++ b/style.css
@@ -307,3 +307,8 @@ body, html {
     border-color: red;
     box-shadow: 0 0 15px rgba(255,0,0,0.4);
 }
+
+/* Add handle styling tweaks if desired */
+#transform-handle {
+    z-index: 250;
+}
